--- a/styles/architect.css
+++ b/styles/architect.css
@@ -112,6 +112,47 @@ gap: 24px;
 #Quick-list{
 font-weight: 500;
 }
+/* feature section related styyles  */
+
+.features{
+gap: 100px;
+
+}
+#feature-section-title{
+  border-left:5px solid #FF900E;
+  padding-left: 20px;
+}
+
+.feature-card{ 
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom:20px;
+  border-radius:8px;
+}
+.feature-card.feature-title{
+font-weight: 600;
+font-size: 1.25rem;
+margin-top:0px ;
+margin-bottom: 0px;
+}
+#experience-badge{
+  padding: 45px 42px;
+  font-size: 1.25rem;
+  font-weight:500;
+  margin-left: -75px;
+  margin-top: -75px;
+}
+#Experience-years{
+font-size: 4rem;
+font-weight: 700;
+}
+
+.feature-artchitect img{
+  width: 100%;
+}
+
+
+
 
 /* some fact reletaid */
 .facts-container{ 
@@ -166,6 +207,7 @@ justify-content: center;
 @media screen and (max-width:576px) {
   .navber,
   .nav-links,
+  .features,
   .teams{
     flex-direction: column;
   }
@@ -186,11 +228,16 @@ gap: 24px;
   .our-features{ 
     margin-left: 20px;
   }
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
 }
 
 /* medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
-.teams{ 
+.teams,
+.features{ 
   flex-direction: column;
 }
 .our-features{ 
@@ -202,6 +249,9 @@ grid-template-columns: repeat(2,1fr);
 gap: 50px;
 justify-items:center ;
 }
-
+#experience-badge{
+  margin-top: 20px;
+  margin-left: 20px;
+}
 }
 
